# Mill

./: .gitignore  LICENSE  README.md  docs.json  pyproject.toml
.claude/skills/adding-a-benchmark/: SKILL.md
.claude/skills/adding-a-model/: SKILL.md
assets/: colors.css
docs/: changelog.mdx  contributing.mdx  installation.mdx  introduction.mdx  quickstart.mdx  reproducibility.mdx
docs/contributing/: add-a-benchmark.mdx  add-a-model.mdx
docs/guides/: distributed.mdx  text-evaluation.mdx  vision-evaluation.mdx
docs/reference/: cli.mdx  models.mdx  output-types.mdx  tasks.mdx
docs/reproducibility/: cifar10.mdx  clotho_aqa.mdx  esc50.mdx  imagenet.mdx  mmlu-pro.mdx  mmlu.mdx  mmmu_pro.mdx  overview.mdx  urbansound8k.mdx
mill/: __init__.py  cli.py  constants.py  evaluator.py  output.py  pipeline.py  utils.py
mill/api/: __init__.py  instance.py  metrics.py  model.py  protocol.py  registry.py  task.py  taxonomy.py
mill/models/: __init__.py  base.py  clip.py  hf_clip.py  litellm.py  loader.py  timm.py  transformers.py  vllm.py
mill/models/configs/clap/: clap_htsat_unfused.py
mill/models/configs/internvl/: internvl2_8b.py
mill/scheduler/: __init__.py  clusters.yaml  slurm.py  template.sbatch
mill/tasks/: __init__.py
mill/tasks/cifar10/: task.py
mill/tasks/clotho_aqa/: task.py
mill/tasks/esc50/: task.py
mill/tasks/imagenet/: classnames.py  task.py
mill/tasks/mmlu/: task.py  utils.py
mill/tasks/mmlu_pro/: task.py  utils.py
mill/tasks/mmmu_pro/: task.py  utils.py
mill/tasks/urbansound8k/: task.py
tests/: test_core.py  tests.sh
(+4 files in other folders)
