[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mill-eval"
version = "0.1.0"
description = "Mill — unified multi-modal evaluation framework"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.18",
    "pandas>=2.0",
    "pyarrow>=14.0",          # feather serialisation
    "pydantic>=2.0",          # ChatMessages protocol
    "pyyaml>=6.0",            # cluster config
    "accelerate>=0.26",
    "huggingface-hub>=0.21",
    "Pillow>=10.0",           # image handling
    "tqdm>=4.66",
    "fire>=0.6",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "oslo.concurrency>=6.0",
]

[project.optional-dependencies]
vllm = ["vllm>=0.4"]
litellm = ["litellm>=1.30"]
clip = ["open_clip_torch>=2.20"]          # CLIP-style zero-shot vision backend
timm = ["timm>=0.9"]                       # supervised vision classification backend
vision = ["open_clip_torch>=2.20", "timm>=0.9"]  # both vision backends
video = ["decord>=0.6"]
audio = ["librosa>=0.10"]
code = ["evaluate>=0.4"]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[project.scripts]
mill = "mill.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mill*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
